// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FzNavbar > Snapshots > should match snapshot - default state 1`] = `
"<header class="z-10 flex p-12 shadow h-56 w-full">
  <div class="mr-32"></div>
  <div class="flex gap-4 flex-row"></div>
  <div class="flex gap-16 ml-auto flex-row"></div>
</header>"
`;

exports[`FzNavbar > Snapshots > should match snapshot - horizontal layout large screen 1`] = `
"<header class="z-10 flex p-12 shadow h-56 w-full">
  <div class="mr-32">
    <div id="brandlogo" class="desktop"></div>
  </div>
  <div class="flex gap-4 flex-row">
    <div class="link">one</div>
    <div class="link">two</div>
    <div class="link">three</div>
  </div>
  <div class="flex gap-16 ml-auto flex-row">
    <div id="notification"></div>
    <div id="avatar"></div>
  </div>
</header>"
`;

exports[`FzNavbar > Snapshots > should match snapshot - horizontal layout small screen 1`] = `
"<header class="z-10 flex p-12 shadow h-56 w-full">
  <div class="mr-32">
    <div id="brandlogo" class="desktop"></div>
  </div>
  <div class="flex gap-4 flex-row">
    <div class="link">one</div>
    <div class="link">two</div>
    <div class="link">three</div>
  </div>
  <div class="flex gap-16 ml-auto flex-row">
    <div id="notification"></div>
    <div id="avatar"></div>
  </div>
</header>"
`;

exports[`FzNavbar > Snapshots > should match snapshot - vertical layout large screen 1`] = `
"<header class="z-10 flex p-12 shadow h-full w-56 flex-col">
  <div class="mb-32">
    <div id="brandlogo" class="desktop"></div>
  </div>
  <div class="flex gap-4 flex-col">
    <div class="link">one</div>
    <div class="link">two</div>
    <div class="link">three</div>
  </div>
  <div class="flex gap-16 mt-auto flex-col">
    <div id="notification"></div>
    <div id="avatar"></div>
  </div>
</header>"
`;

exports[`FzNavbar > Snapshots > should match snapshot - vertical layout small screen 1`] = `
"<header class="z-10 flex p-12 shadow h-full w-56 flex-col">
  <div class="mb-32">
    <div id="brandlogo" class="desktop"></div>
  </div>
  <div class="flex gap-4 flex-col">
    <div class="link">one</div>
    <div class="link">two</div>
    <div class="link">three</div>
  </div>
  <div class="flex gap-16 mt-auto flex-col">
    <div id="notification"></div>
    <div id="avatar"></div>
  </div>
</header>"
`;

exports[`FzNavbar > Snapshots > should match snapshot - with menu open 1`] = `
"<header class="z-10 flex p-12 shadow h-56 w-full">
  <div class="mr-32">
    <div id="brandlogo" class="desktop"></div>
  </div>
  <div class="flex gap-4 flex-row">
    <div class="link">one</div>
    <div class="link">two</div>
    <div class="link">three</div>
  </div>
  <div class="flex gap-16 ml-auto flex-row">
    <div id="notification"></div>
    <div id="avatar"></div>
  </div>
</header>"
`;

exports[`FzNavbar > should match snapshot in horizontal layout large screen 1`] = `
"<header class="flex p-12 shadow h-56 w-full">
  <div class="mr-32">
    <div id="brandlogo" class="desktop"></div>
  </div>
  <div class="flex gap-4 flex-row">
    <div class="link">one</div>
    <div class="link">two</div>
    <div class="link">three</div>
  </div>
  <div class="flex gap-16 ml-auto flex-row">
    <div id="notification"></div>
    <div id="avatar"></div>
  </div>
</header>"
`;

exports[`FzNavbar > should match snapshot in horizontal layout small screen 1`] = `
"<header class="flex p-12 shadow justify-between h-56 w-full"><button type="button" class="relative rounded flex flex-shrink items-center justify-center font-medium border-1 border-transparent h-32 focus:border-blue-600 focus:border-solid focus:border-1 px-16 text-grey-500 bg-core-white !border-grey-200 hover:bg-grey-100 focus:!border-blue-600 disabled:text-grey-100 w-32 h-32">
    <!--v-if-->
    <div class="flex items-center justify-center w-[25px] h-[25px]"><svg class="svg-inline--fa fa-bars fa-lg h-[20px]" aria-hidden="true" focusable="false" data-prefix="far" data-icon="bars" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
        <path class="" fill="currentColor" d="M0 88C0 74.7 10.7 64 24 64H424c13.3 0 24 10.7 24 24s-10.7 24-24 24H24C10.7 112 0 101.3 0 88zM0 248c0-13.3 10.7-24 24-24H424c13.3 0 24 10.7 24 24s-10.7 24-24 24H24c-13.3 0-24-10.7-24-24zM448 408c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24s10.7-24 24-24H424c13.3 0 24 10.7 24 24z"></path>
      </svg></div>
    <!--v-if-->
    <!--v-if--><span class="hidden h-0 w-0">menu</span>
  </button>
  <div>
    <div id="brandlogo" class="mobile"></div>
  </div>
  <div>
    <div id="notification"></div>
  </div>
</header>"
`;

exports[`FzNavbar > should match snapshot in vertical layout large screen 1`] = `
"<header class="flex p-12 shadow h-full w-56 flex-col">
  <div class="mb-32">
    <div id="brandlogo" class="desktop"></div>
  </div>
  <div class="flex gap-4 flex-col">
    <div class="link">one</div>
    <div class="link">two</div>
    <div class="link">three</div>
  </div>
  <div class="flex gap-16 mt-auto flex-col">
    <div id="notification"></div>
    <div id="avatar"></div>
  </div>
</header>"
`;

exports[`FzNavbar > should match snapshot in vertical layout small screen 1`] = `
"<header class="flex p-12 shadow justify-between h-56 w-full"><button type="button" class="relative rounded flex flex-shrink items-center justify-center font-medium border-1 border-transparent h-32 focus:border-blue-600 focus:border-solid focus:border-1 px-16 text-grey-500 bg-core-white !border-grey-200 hover:bg-grey-100 focus:!border-blue-600 disabled:text-grey-100 w-32 h-32">
    <!--v-if-->
    <div class="flex items-center justify-center w-[25px] h-[25px]"><svg class="svg-inline--fa fa-bars fa-lg h-[20px]" aria-hidden="true" focusable="false" data-prefix="far" data-icon="bars" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
        <path class="" fill="currentColor" d="M0 88C0 74.7 10.7 64 24 64H424c13.3 0 24 10.7 24 24s-10.7 24-24 24H24C10.7 112 0 101.3 0 88zM0 248c0-13.3 10.7-24 24-24H424c13.3 0 24 10.7 24 24s-10.7 24-24 24H24c-13.3 0-24-10.7-24-24zM448 408c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24s10.7-24 24-24H424c13.3 0 24 10.7 24 24z"></path>
      </svg></div>
    <!--v-if-->
    <!--v-if--><span class="hidden h-0 w-0">menu</span>
  </button>
  <div>
    <div id="brandlogo" class="mobile"></div>
  </div>
  <div>
    <div id="avatar"></div>
  </div>
</header>"
`;
